# parseltongue-rust-LLM-companion

./: Dockerfile  docker-compose.yml
crates/parseltongue-mcp/: Cargo.toml
crates/parseltongue-mcp/src/: main.rs
crates/pt08-http-code-query-server/src/: route_definition_builder_module.rs
crates/pt08-http-code-query-server/src/http_endpoint_handler_modules/: mod.rs  upload_codebase_handler.rs
