[package]
name = "parseltongue-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Parseltongue Team"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
